--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -145,6 +145,13 @@ main {
             }
         }
 
+        .card:hover {
+            transform: scale(1.1);
+            z-index: 2;
+            transition: 0.8s ease;
+            margin: unset;
+        }
+
         .card.professional {
             background: linear-gradient(to bottom right, hsl(236, 72%, 79%), hsl(237, 63%, 64%));
 
