added last changes before deploy

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
 body {
-  background: no-repeat top url("../../public/images/bg-top.svg");
+  background: no-repeat top url("./images/bg-top.svg");
   background-position-x: right -200px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -12,6 +12,7 @@ body {
 
 main {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 main .heading-container h1 {
   text-align: center;
@@ -154,15 +155,10 @@ main .card-container .card.professional button:hover a {
 
 .attribution {
   font-size: 11px;
-  position: absolute;
-  bottom: 0;
-  display: inline-flex;
-  width: 100%;
-  justify-content: center;
+  text-align: center;
 }
 
 .attribution a {
-  padding-left: 5px;
   color: hsl(228deg, 45%, 44%);
 }
 
@@ -173,7 +169,7 @@ main .card-container .card.professional button:hover a {
   main {
     position: absolute;
     bottom: 0;
-    background: no-repeat bottom left url("../../public/images/bg-bottom.svg");
+    background: no-repeat bottom left url("./images/bg-bottom.svg");
     width: 100%;
   }
   main .card-container {
@@ -191,6 +187,16 @@ main .card-container .card.professional button:hover a {
     padding-bottom: 50px;
     display: inline-flex;
     align-self: center;
+  }
+  .attribution {
+    position: absolute;
+    bottom: 0;
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+  }
+  .attribution a {
+    padding-left: 5px;
   }
 }
 
