--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 body {
-    background: no-repeat top url('./images/bg-top.svg');
+    background: no-repeat top url('/images/bg-top.svg');
     background-position-x: right -200px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -200,7 +200,7 @@ main {
     main {
         position: absolute;
         bottom: 0;
-        background: no-repeat bottom left url('./images/bg-bottom.svg');
+        background: no-repeat bottom left url('/images/bg-bottom.svg');
         width: 100%;
 
         .card-container {
